[gd_scene format=3 uid="uid://dla5erscene04"]

[ext_resource type="Script" uid="uid://bla5erbeam001" path="res://Scripts/Weapons/laser_beam.gd" id="1_laser"]
[ext_resource type="Script" uid="uid://crntbae1m1yon" path="res://Scripts/Weapons/laser_beam_visual.gd" id="2_visual"]
[ext_resource type="Script" uid="uid://crntaviw137oo" path="res://Scripts/Weapons/laser_impact_effect.gd" id="3_impact"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_34mpn"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5x03j"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m5i7v"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[node name="LaserBeam" type="Node2D" unique_id=1928955507]
script = ExtResource("1_laser")

[node name="RayCast2D" type="RayCast2D" parent="." unique_id=979345367]
enabled = false
target_position = Vector2(0, -500)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="LaserBeamVisual" type="Node2D" parent="." unique_id=476956674]
script = ExtResource("2_visual")

[node name="BeamGlow" type="Line2D" parent="LaserBeamVisual"]
width = 12.0
default_color = Color(0.2, 0.7, 1, 0.35)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BeamLine" type="Line2D" parent="LaserBeamVisual" unique_id=2013160485]
modulate = Color(0.61805826, 0.30387694, 0.84760183, 1)
width = 4.0
default_color = Color(0.3, 0.9, 1, 0.9)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BeamParticles" type="GPUParticles2D" parent="LaserBeamVisual" unique_id=1133422209]
emitting = false
process_material = SubResource("ParticleProcessMaterial_34mpn")

[node name="GlowParticles" type="GPUParticles2D" parent="LaserBeamVisual" unique_id=1569209103]
emitting = false
process_material = SubResource("ParticleProcessMaterial_5x03j")

[node name="MuzzleEffect" type="GPUParticles2D" parent="LaserBeamVisual"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_5x03j")

[node name="ImpactEffect" type="GPUParticles2D" parent="." unique_id=672002934]
emitting = false
process_material = SubResource("ParticleProcessMaterial_m5i7v")
script = ExtResource("3_impact")
